Running some more trials

--- a/ALBERT_Trials.ipynb
+++ b/ALBERT_Trials.ipynb
@@ -617,7 +617,7 @@
         "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\r\n",
         "    test_convlen = pickle.load(f)"
       ],
-      "execution_count": 55,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -679,7 +679,7 @@
         "test_data[7]=data[75]\r\n",
         "test_labels[7]=labels[75]"
       ],
-      "execution_count": 56,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -737,9 +737,9 @@
         "id": "vh9RNmdFAuMo"
       },
       "source": [
-        "test_vader_features = test_processed_data"
+        "test_vader_features = test_data"
       ],
-      "execution_count": 59,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -748,12 +748,12 @@
         "id": "GWaX_nAIA2Na"
       },
       "source": [
-        "with open('new_test_vader_features.pkl', 'wb') as f:\r\n",
+        "with open('test_data.pkl', 'wb') as f:\r\n",
         "  pickle.dump(test_vader_features, f)\r\n",
-        "with open('new_test_vader_labels.pkl', 'wb') as f:\r\n",
-        "  pickle.dump(test_processed_label, f)"
+        "with open('test_labels.pkl', 'wb') as f:\r\n",
+        "  pickle.dump(test_labels, f)"
       ],
-      "execution_count": 60,
+      "execution_count": 66,
       "outputs": []
     }
   ]
