Created the whole pipeline

--- a/Run.ipynb
+++ b/Run.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Run.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNEJtFWWe8O1PElOeCzPLae",
+      "authorship_tag": "ABX9TyNZDhSWgUgNKjWzvE034IXh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9GimOUSzt7dW",
-        "outputId": "dd3d5fe4-d369-4e27-d1c6-dc299443dc3f"
+        "outputId": "1861f28f-2e64-4251-b992-dbd9b2f43229"
       },
       "source": [
         "import pickle\r\n",
@@ -51,9 +51,14 @@
         "nltk.download('punkt')\r\n",
         "nltk.download('stopwords')\r\n",
         "import numpy as np\r\n",
-        "from keras.utils.np_utils import to_categorical  "
+        "from keras.utils.np_utils import to_categorical  \r\n",
+        "import tensorflow_hub as hub\r\n",
+        "import tensorflow as tf\r\n",
+        "from tensorflow.keras.layers import Dense, Input\r\n",
+        "from tensorflow.keras.optimizers import Adam\r\n",
+        "from tensorflow.keras.models import Model"
       ],
-      "execution_count": 20,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,6 +369,258 @@
         "Y=to_categorical(processed_label, num_classes=6)"
       ],
       "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EVjJaH6z2dvd"
+      },
+      "source": [
+        "**Preparing the Model**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dGvV8w0A2gRy",
+        "outputId": "f2d9d3dc-469a-4606-c5d8-14e041dc65fe"
+      },
+      "source": [
+        "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\r\n",
+        "!pip install sentencepiece\r\n",
+        "import tokenization\r\n",
+        "sp_model_file = albert_layer.resolved_object.sp_model_file.asset_path.numpy()\r\n",
+        "tokenizer = tokenization.FullSentencePieceTokenizer(sp_model_file)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.7/dist-packages (0.1.95)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UUyuovC42jyY"
+      },
+      "source": [
+        "def albert_encode(texts, tokenizer, max_len=512):\r\n",
+        "    all_tokens = []\r\n",
+        "    all_masks = []\r\n",
+        "    all_segments = []\r\n",
+        "    \r\n",
+        "    for text in texts:\r\n",
+        "        text = tokenizer.tokenize(text)\r\n",
+        "            \r\n",
+        "        text = text[:max_len-2]\r\n",
+        "        input_sequence = [\"[CLS]\"] + text + [\"[SEP]\"]\r\n",
+        "        pad_len = max_len - len(input_sequence)\r\n",
+        "        \r\n",
+        "        tokens = tokenizer.convert_tokens_to_ids(input_sequence)\r\n",
+        "        tokens += [0] * pad_len\r\n",
+        "        pad_masks = [1] * len(input_sequence) + [0] * pad_len\r\n",
+        "        segment_ids = [0] * max_len\r\n",
+        "        \r\n",
+        "        all_tokens.append(tokens)\r\n",
+        "        all_masks.append(pad_masks)\r\n",
+        "        all_segments.append(segment_ids)\r\n",
+        "    \r\n",
+        "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)\r\n",
+        "def build_model(bert_layer, max_len=512):\r\n",
+        "    input_word_ids = Input(shape=(max_len,), dtype=tf.int32, name=\"input_word_ids\")\r\n",
+        "    input_mask = Input(shape=(max_len,), dtype=tf.int32, name=\"input_mask\")\r\n",
+        "    segment_ids = Input(shape=(max_len,), dtype=tf.int32, name=\"segment_ids\")\r\n",
+        "\r\n",
+        "    pooled_output, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])\r\n",
+        "    clf_output = pooled_output\r\n",
+        "    out = Dense(100, activation='relu')(clf_output)\r\n",
+        "    out = Dense(100, activation='relu')(out)\r\n",
+        "    out = Dense(6, activation='softmax')(out)\r\n",
+        "    \r\n",
+        "    model = Model(inputs=[input_word_ids, input_mask, segment_ids], outputs=out)\r\n",
+        "    model.compile(Adam(lr=2e-6), loss='binary_crossentropy', metrics=['accuracy'])\r\n",
+        "    \r\n",
+        "    return model"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8gHsHOgC2pkW"
+      },
+      "source": [
+        "module_url = \"https://tfhub.dev/tensorflow/albert_en_base/1\"\r\n",
+        "albert_layer = hub.KerasLayer(module_url, trainable=True)"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4jjuLQww245l"
+      },
+      "source": [
+        "train_input = albert_encode(processed_data, tokenizer, max_len=160)\r\n",
+        "train_labels = Y"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wlLE3f3g3Ac8",
+        "outputId": "60f637d9-b0c6-459a-c476-797bf9daae2f"
+      },
+      "source": [
+        "model = build_model(albert_layer, max_len=160)\r\n",
+        "model.summary()"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model\"\n",
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "input_word_ids (InputLayer)     [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "input_mask (InputLayer)         [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "segment_ids (InputLayer)        [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "keras_layer (KerasLayer)        [(None, 768), (None, 11683584    input_word_ids[0][0]             \n",
+            "                                                                 input_mask[0][0]                 \n",
+            "                                                                 segment_ids[0][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_3 (Dense)                 (None, 100)          76900       keras_layer[1][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_4 (Dense)                 (None, 100)          10100       dense_3[0][0]                    \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_5 (Dense)                 (None, 6)            606         dense_4[0][0]                    \n",
+            "==================================================================================================\n",
+            "Total params: 11,771,190\n",
+            "Trainable params: 11,771,190\n",
+            "Non-trainable params: 0\n",
+            "__________________________________________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oOMmKz3O3Z1-"
+      },
+      "source": [
+        "**Training with data**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6wQSlcpZ3ZP_",
+        "outputId": "f106432d-ba89-42af-baa4-e5d651c01ee1"
+      },
+      "source": [
+        "train_history = model.fit(\r\n",
+        "    train_input, train_labels,\r\n",
+        "    epochs=6,\r\n",
+        "    batch_size=1\r\n",
+        ")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/6\n",
+            " 3690/14097 [======>.......................] - ETA: 8:04 - loss: 0.4531 - accuracy: 0.2641"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4jmxXJqt3f1g"
+      },
+      "source": [
+        "**Preprocessing Test Data and passing through the model for accuracy**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-KJmF2rL3pHm"
+      },
+      "source": [
+        "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)\r\n",
+        "for i in range(0,len(test_processed_data)):\r\n",
+        "  test_processed_data[i]=' '.join(test_processed_data[i])\r\n",
+        "test_processed_data=np.asarray(test_processed_data)\r\n",
+        "test_Y=to_categorical(test_processed_label, num_classes=6)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Z7t1ifS3_yX"
+      },
+      "source": [
+        "test_input = albert_encode(test_processed_data, tokenizer, max_len=160)\r\n",
+        "test_labels = test_Y"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5RMJ4VbY4BoP"
+      },
+      "source": [
+        "y_pred=model.predict(test_input, batch_size=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UBqE9q1f4ERN"
+      },
+      "source": [
+        "y_pred1=np.argmax(y_pred,axis=1)\r\n",
+        "test_processed_label=np.asarray(test_processed_label)\r\n",
+        "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\r\n",
+        "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
