Working with output

--- a/Run.ipynb
+++ b/Run.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Run.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNZDhSWgUgNKjWzvE034IXh",
+      "authorship_tag": "ABX9TyNvfznK8exiwxLarHknrDYl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9GimOUSzt7dW",
-        "outputId": "1861f28f-2e64-4251-b992-dbd9b2f43229"
+        "outputId": "4a8a417c-7a30-4506-ea00-bf70a7b9b9f5"
       },
       "source": [
         "import pickle\r\n",
@@ -56,9 +56,11 @@
         "import tensorflow as tf\r\n",
         "from tensorflow.keras.layers import Dense, Input\r\n",
         "from tensorflow.keras.optimizers import Adam\r\n",
-        "from tensorflow.keras.models import Model"
+        "from tensorflow.keras.models import Model\r\n",
+        "from sklearn.metrics import f1_score\r\n",
+        "from sklearn.metrics import accuracy_score"
       ],
-      "execution_count": 33,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,13 +552,23 @@
         "    batch_size=1\r\n",
         ")"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/6\n",
-            " 3690/14097 [======>.......................] - ETA: 8:04 - loss: 0.4531 - accuracy: 0.2641"
+            "14097/14097 [==============================] - 672s 47ms/step - loss: 0.4148 - accuracy: 0.3469\n",
+            "Epoch 2/6\n",
+            "14097/14097 [==============================] - 662s 47ms/step - loss: 0.2563 - accuracy: 0.6880\n",
+            "Epoch 3/6\n",
+            "14097/14097 [==============================] - 661s 47ms/step - loss: 0.1512 - accuracy: 0.8438\n",
+            "Epoch 4/6\n",
+            "14097/14097 [==============================] - 663s 47ms/step - loss: 0.1028 - accuracy: 0.8939\n",
+            "Epoch 5/6\n",
+            "14097/14097 [==============================] - 662s 47ms/step - loss: 0.0852 - accuracy: 0.9056\n",
+            "Epoch 6/6\n",
+            "14097/14097 [==============================] - 665s 47ms/step - loss: 0.0701 - accuracy: 0.9228\n"
           ],
           "name": "stdout"
         }
@@ -583,7 +595,7 @@
         "test_processed_data=np.asarray(test_processed_data)\r\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -595,7 +607,7 @@
         "test_input = albert_encode(test_processed_data, tokenizer, max_len=160)\r\n",
         "test_labels = test_Y"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -606,13 +618,17 @@
       "source": [
         "y_pred=model.predict(test_input, batch_size=1)"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UBqE9q1f4ERN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UBqE9q1f4ERN",
+        "outputId": "1ad44ded-5ba2-43a0-9bab-9c4fbc45766b"
       },
       "source": [
         "y_pred1=np.argmax(y_pred,axis=1)\r\n",
@@ -620,8 +636,17 @@
         "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\r\n",
         "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy : 0.6674876847290641\n",
+            "Weighted F1-score : 0.6689040170738395\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
