--- a/Run.ipynb
+++ b/Run.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Run.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNvfznK8exiwxLarHknrDYl",
+      "authorship_tag": "ABX9TyP3KFhH3yA2UBuGpbEddmfb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9GimOUSzt7dW",
-        "outputId": "4a8a417c-7a30-4506-ea00-bf70a7b9b9f5"
+        "outputId": "ce0cb874-d7eb-41f4-d3cd-5f6150a935bb"
       },
       "source": [
         "import pickle\r\n",
@@ -60,7 +60,7 @@
         "from sklearn.metrics import f1_score\r\n",
         "from sklearn.metrics import accuracy_score"
       ],
-      "execution_count": 40,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w8c_X7ddh8lK",
-        "outputId": "a3e2198f-9164-4d6b-bf8f-4605929d907e"
+        "outputId": "070987fc-cb82-4dac-81d4-091aa9bbe1cc"
       },
       "source": [
         "from google.colab import drive\r\n",
@@ -101,7 +101,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -248,7 +248,7 @@
         "        conceptnet_labels.append(labels[sentences])\r\n",
         "  return conceptnet_data,conceptnet_labels"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -274,36 +274,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5q988xzhzgEc",
-        "outputId": "407a0db2-d0ca-4fd9-e34a-555dc01c84f3"
+        "id": "5q988xzhzgEc"
       },
       "source": [
         "!pip install vaderSentiment\r\n",
         "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\r\n",
         "analyzer = SentimentIntensityAnalyzer()"
       ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting vaderSentiment\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/76/fc/310e16254683c1ed35eeb97386986d6c00bc29df17ce280aed64d55537e9/vaderSentiment-3.3.2-py2.py3-none-any.whl (125kB)\n",
-            "\r\u001b[K     |██▋                             | 10kB 23.2MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 20kB 30.6MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 30kB 25.8MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 40kB 29.0MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 51kB 26.8MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 61kB 29.5MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 71kB 18.7MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 81kB 19.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 92kB 18.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 102kB 18.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 112kB 18.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 122kB 18.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 133kB 18.1MB/s \n",
-            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from vaderSentiment) (2.23.0)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2.10)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2020.12.5)\n",
-            "Installing collected packages: vaderSentiment\n",
-            "Successfully installed vaderSentiment-3.3.2\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -338,7 +317,7 @@
         "    vader_features.append(temp)\r\n",
         "  return vader_features"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -349,7 +328,7 @@
       "source": [
         "processed_data = add_Vader_Features(processed_data)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +349,7 @@
         "processed_data=np.asarray(processed_data)\r\n",
         "Y=to_categorical(processed_label, num_classes=6)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,29 +364,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dGvV8w0A2gRy",
-        "outputId": "f2d9d3dc-469a-4606-c5d8-14e041dc65fe"
+        "id": "dGvV8w0A2gRy"
       },
       "source": [
         "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\r\n",
         "!pip install sentencepiece\r\n",
-        "import tokenization\r\n",
-        "sp_model_file = albert_layer.resolved_object.sp_model_file.asset_path.numpy()\r\n",
-        "tokenizer = tokenization.FullSentencePieceTokenizer(sp_model_file)"
+        "import tokenization"
       ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.7/dist-packages (0.1.95)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -453,7 +418,7 @@
         "    \r\n",
         "    return model"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,7 +430,7 @@
         "module_url = \"https://tfhub.dev/tensorflow/albert_en_base/1\"\r\n",
         "albert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -474,58 +439,25 @@
         "id": "4jjuLQww245l"
       },
       "source": [
+        "sp_model_file = albert_layer.resolved_object.sp_model_file.asset_path.numpy()\r\n",
+        "tokenizer = tokenization.FullSentencePieceTokenizer(sp_model_file)\r\n",
         "train_input = albert_encode(processed_data, tokenizer, max_len=160)\r\n",
         "train_labels = Y"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wlLE3f3g3Ac8",
-        "outputId": "60f637d9-b0c6-459a-c476-797bf9daae2f"
+        "id": "wlLE3f3g3Ac8"
       },
       "source": [
         "model = build_model(albert_layer, max_len=160)\r\n",
         "model.summary()"
       ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model: \"model\"\n",
-            "__________________________________________________________________________________________________\n",
-            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            "input_word_ids (InputLayer)     [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "input_mask (InputLayer)         [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "segment_ids (InputLayer)        [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "keras_layer (KerasLayer)        [(None, 768), (None, 11683584    input_word_ids[0][0]             \n",
-            "                                                                 input_mask[0][0]                 \n",
-            "                                                                 segment_ids[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_3 (Dense)                 (None, 100)          76900       keras_layer[1][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_4 (Dense)                 (None, 100)          10100       dense_3[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_5 (Dense)                 (None, 6)            606         dense_4[0][0]                    \n",
-            "==================================================================================================\n",
-            "Total params: 11,771,190\n",
-            "Trainable params: 11,771,190\n",
-            "Non-trainable params: 0\n",
-            "__________________________________________________________________________________________________\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -539,40 +471,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6wQSlcpZ3ZP_",
-        "outputId": "f106432d-ba89-42af-baa4-e5d651c01ee1"
+        "id": "6wQSlcpZ3ZP_"
       },
       "source": [
         "train_history = model.fit(\r\n",
         "    train_input, train_labels,\r\n",
-        "    epochs=6,\r\n",
+        "    epochs=3,\r\n",
         "    batch_size=1\r\n",
         ")"
       ],
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/6\n",
-            "14097/14097 [==============================] - 672s 47ms/step - loss: 0.4148 - accuracy: 0.3469\n",
-            "Epoch 2/6\n",
-            "14097/14097 [==============================] - 662s 47ms/step - loss: 0.2563 - accuracy: 0.6880\n",
-            "Epoch 3/6\n",
-            "14097/14097 [==============================] - 661s 47ms/step - loss: 0.1512 - accuracy: 0.8438\n",
-            "Epoch 4/6\n",
-            "14097/14097 [==============================] - 663s 47ms/step - loss: 0.1028 - accuracy: 0.8939\n",
-            "Epoch 5/6\n",
-            "14097/14097 [==============================] - 662s 47ms/step - loss: 0.0852 - accuracy: 0.9056\n",
-            "Epoch 6/6\n",
-            "14097/14097 [==============================] - 665s 47ms/step - loss: 0.0701 - accuracy: 0.9228\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -595,7 +504,7 @@
         "test_processed_data=np.asarray(test_processed_data)\r\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -607,7 +516,7 @@
         "test_input = albert_encode(test_processed_data, tokenizer, max_len=160)\r\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -618,17 +527,13 @@
       "source": [
         "y_pred=model.predict(test_input, batch_size=1)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UBqE9q1f4ERN",
-        "outputId": "1ad44ded-5ba2-43a0-9bab-9c4fbc45766b"
+        "id": "UBqE9q1f4ERN"
       },
       "source": [
         "y_pred1=np.argmax(y_pred,axis=1)\r\n",
@@ -636,17 +541,8 @@
         "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\r\n",
         "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
       ],
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy : 0.6674876847290641\n",
-            "Weighted F1-score : 0.6689040170738395\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
